# labelmaker

./: LICENSE.md  README.md  labels.json  pyproject.toml
src/: main.py
src/lib/: app.py
src/lib/models/: repository.py
