[tool.poetry]
name = "labelmaker"
version = "0.1.0"
description = ""
authors = ["Iury F. A. Ferreira <iury.franklinferreira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
